[project]
name = "iota"
version = "0.1.0"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]

[dependencies]
docopt = "0.6.47"
rustbox = "0.6.3"
rustc-serialize = "0.3.14"
gapbuffer = "0.1.1"
tempdir = "0.3.0"
unicode-width = "0.1.1"

[lib]
name = "iota"
path = "src/iota/lib.rs"

[[bin]]
name = "iota"
doc = false
