[project]
name = "iota-editor"
version = "0.1.0"
description = "A simple text editor"
license = "MIT"
homepage = "https://github.com/gchp/iota"
repository = "https://github.com/gchp/iota"
keywords = ["editor", "text", "terminal"]
readme = "README.md"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]

[dependencies]
docopt = "0.6.47"
rustbox = "0.7.1"
rustc-serialize = "0.3.14"
gapbuffer = "0.1.1"
tempdir = "0.3.0"
unicode-width = "0.1.1"
libc = "0.1"
strings = "0.0.1"

[lib]
name = "iota"
path = "src/iota/lib.rs"

[[bin]]
name = "iota"
doc = false
